# gemini-precommit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gemini_precommit/: __init__.py  analyzer.py  cli.py  gemini_client.py  generator.py  logging.py  utils.py
tests/: test_analyzer.py
